Updated for February 2019
Added section on MySQL

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<title>
-		Christopher McCabe - Resume - May 2018
+		Christopher McCabe - Resume - February 2019
 	</title>
 	<style>
 		html {
@@ -179,9 +179,8 @@
 	<div id="bmain">
 		<div id="summary">
 			<p>
-				Problem solver with strong interest in debugging, optimization, and software architecture. Recently graduated with a B.S. in Computer Science. Attended regional coding events to improve problem solving skills in a team setting under time constraints. Experienced with drafting and editing technical documents.
+				Problem solver with strong interest in debugging, optimization, and software architecture. Recently graduated with a B.S. in Computer Science. Attended regional coding events to improve problem solving skills in a team setting under time constraints. Interested in applications of Machine Learning to create more immersive worlds in video games.
 			</p>
-		</div>
 		
 		<div id="education">
 			<h3>
@@ -204,6 +203,9 @@
                                 Multi-threading and machine learning in Python
                             </li>
 							<li>
+								Emulation of IMDB in a MySQL database
+							</li>
+							<li>
 								Application of calculus and linear algebra in OpenGL
 							</li>
 							<li>
@@ -213,18 +215,38 @@
 								Architectural languages such as UML and OCL
 							</li>
                             <li>
-                                IDE utility (Eclipse, Visual Studio, BlueJ)
+                                IDE utility (Eclipse, Visual Studio, Unreal Engine, BlueJ)
                             </li>
 						</ul>
 					</td>
 				</tr>
 			</table>
 		</div>
+		</div>
+		
 		<div id="Experience">
 			<h3>
 				Experience
 			</h3>
 			<table>
+				<tr>
+					<td>
+						Jul&nbsp;2018&nbsp;- Jan&nbsp;2019
+					</td>
+					<td>
+						<h4>
+							Grocery Freight Team Associate
+						</h4>
+						<h5>
+							Fred Meyer, Renton, WA
+						</h5>
+						<ul>
+							<li>
+								Performed as social lead for team during holiday season
+							</li>
+						</ul>
+					</td>
+				</tr>
 				<tr>
 					<td>
 						May&nbsp;2016&nbsp;- Apr&nbsp;2017
@@ -234,7 +256,7 @@
 							Freight Team Associate
 						</h4>
 						<h5>
-							The Home Depot
+							The Home Depot, Bozeman, MT
 						</h5>
 						<ul>
 							<li>
@@ -258,7 +280,7 @@
 							Student Research Assistant
 						</h4>
 						<h5>
-							The Western Transportation Institute
+							The Western Transportation Institute, Bozeman, MT
 						</h5>
 						<ul>
 							<li>
@@ -278,6 +300,7 @@
 				</tr>
 			</table>
 		</div>
+		
 		<div id="extra">
 			<h3>
 				Extracurricular Activities
@@ -299,7 +322,7 @@
 					</td>
 					<td>
 						<p>
-							Placed in local <a target="_blank" href="https://icpc.baylor.edu/">ACM International Collegiate Programming Contest</a> and attended subsequent regional competition
+							Placed in local <a href="https://icpc.baylor.edu/">ACM International Collegiate Programming Contest</a> and attended subsequent regional competition
 						</p>
 					</td>
 				</tr>
@@ -309,7 +332,7 @@
 					</td>
 					<td>
 						<p>
-							Participated in yearly <a target="_blank" href="http://www.launchcats.org/code24/">Code|24</a> events
+							Participated in yearly <a href="http://www.launchcats.org/code24/">Code|24</a> events
 						</p>
 					</td>
 				</tr>
@@ -319,7 +342,7 @@
 					</td>
 					<td>
 						<p>
-							Competed in MIT's <a target="_blank" href="https://www.battlecode.org/">Battlecode 2016</a> competition
+							Competed in MIT's <a href="https://www.battlecode.org/">Battlecode 2016</a> competition
 						</p>
 					</td>
 				</tr>
